Fix bottom nav bar design

--- a/TalentShow/app/src/main/res/menu/menu_bottom_nav_bar.xml
+++ b/TalentShow/app/src/main/res/menu/menu_bottom_nav_bar.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/nav_casting"
-        android:icon="@drawable/casting_icon"
+        android:icon="@drawable/casting_heart_icon"
         android:title="@string/casting"/>
 
 
