--- a/TalentShow/app/src/main/res/drawable/star.xml
+++ b/TalentShow/app/src/main/res/drawable/star.xml
@@ -1,6 +1,7 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="28dp"
     android:height="26dp"
+    android:tint="#A3A3A3"
     android:viewportWidth="28"
     android:viewportHeight="26">
   <path
