Changed exoplayer play/pause button view Fixing video playing in RecyclerView

--- a/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
@@ -70,7 +70,8 @@
                 android:id="@+id/rating_item_start"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:background="@drawable/exo_controls_play"
+                android:background="@drawable/dark_circle_shape"
+                style="@style/ExoMediaButton.Play"
                 android:elevation="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
