--- a/TalentShow/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/TalentShow/app/src/main/res/layout/exo_playback_control_view.xml
@@ -1,20 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <ImageButton android:id="@id/exo_play"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:background="#CC000000"
+        android:background="@drawable/dark_circle_shape"
         style="@style/ExoMediaButton.Play"/>
 
     <ImageButton android:id="@id/exo_pause"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:background="#CC000000"
+        android:background="@drawable/dark_circle_shape"
         style="@style/ExoMediaButton.Pause"/>
 
 </FrameLayout>
