--- a/TalentShow/app/src/main/res/layout-ldpi/fragment_registration.xml
+++ b/TalentShow/app/src/main/res/layout-ldpi/fragment_registration.xml
@@ -118,6 +118,7 @@
             android:layout_marginBottom="5dp"
             android:textColor="@color/whiteText"
             android:background="@color/none_color"
+            android:textCursorDrawable="@color/whiteText"
             app:layout_constraintStart_toEndOf="@id/fragment_filed1_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -169,6 +170,7 @@
             android:paddingBottom="5dp"
             android:inputType="textEmailAddress"
             android:background="@color/none_color"
+            android:textCursorDrawable="@color/whiteText"
             android:hint="@string/enter_ur_mail"
             android:textColorHint="@color/hint_text_color"
             app:layout_constraintStart_toEndOf="@id/fragment_filed2_guideline"
@@ -217,6 +219,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:background="@color/none_color"
+            android:textCursorDrawable="@color/whiteText"
             android:hint="@string/create_password"
             android:inputType="textPassword"
             android:paddingTop="5dp"
