--- a/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
@@ -122,6 +122,7 @@
                 android:textColor="@color/blackText"
                 android:inputType="textEmailAddress"
                 android:background="@color/none_color"
+                android:textCursorDrawable="@color/whiteText"
                 android:paddingTop="5dp"
                 android:paddingBottom="5dp"
                 android:textColorHint="@color/hint_text_color"
@@ -174,6 +175,7 @@
             android:textColor="@color/blackText"
             android:inputType="textPassword"
             android:background="@color/none_color"
+            android:textCursorDrawable="@color/whiteText"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
             android:textColorHint="@color/hint_text_color"
