--- a/TalentShow/app/src/main/res/layout/fragment_change_password.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_change_password.xml
@@ -52,6 +52,7 @@
             android:textColor="@color/whiteText"
             android:inputType="textPassword"
             android:background="@color/none_color"
+            android:textCursorDrawable="@color/whiteText"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             app:layout_constraintStart_toEndOf="@id/fragment_change_profile_filed1_guideline"
@@ -104,6 +105,7 @@
             android:layout_marginEnd="12dp"
             android:textSize="17sp"
             android:textColor="@color/whiteText"
+            android:textCursorDrawable="@color/whiteText"
             android:inputType="textPassword"
             android:background="@color/none_color"
             android:paddingTop="5dp"
