--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -79,6 +79,7 @@
             android:enabled="false"
             android:importantForAutofill="no"
             android:inputType="textMultiLine"
+            android:textCursorDrawable="@color/whiteText"
             android:maxLength="40"
             android:padding="10dp"
             android:textColor="@color/whiteText"
@@ -154,6 +155,7 @@
             android:importantForAutofill="no"
             android:inputType="textMultiLine"
             android:textColor="@color/whiteText"
+            android:textCursorDrawable="@color/whiteText"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
