--- a/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
@@ -50,6 +50,7 @@
             android:textSize="17sp"
             android:text="@string/seven_points"
             android:textColor="@color/whiteText"
+            android:textCursorDrawable="@color/whiteText"
             android:inputType="none"
             android:background="@color/none_color"
             android:paddingTop="5dp"
@@ -107,6 +108,7 @@
             android:textColor="@color/whiteText"
             android:inputType="none"
             android:background="@color/none_color"
+            android:textCursorDrawable="@color/whiteText"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             app:layout_constraintStart_toEndOf="@id/fragment_profile_settings_mail_guideline"
