--- a/TalentShow/app/src/main/res/layout/fragment_registration.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_registration.xml
@@ -121,6 +121,7 @@
                 android:layout_marginEnd="12dp"
                 android:layout_marginBottom="5dp"
                 android:background="@color/none_color"
+                android:textCursorDrawable="@color/whiteText"
                 android:hint="@string/enter_ur_name"
                 android:paddingTop="5dp"
                 android:singleLine="true"
@@ -174,6 +175,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
                 android:background="@color/none_color"
+                android:textCursorDrawable="@color/whiteText"
                 android:hint="@string/enter_ur_mail"
                 android:inputType="textEmailAddress"
                 android:paddingTop="5dp"
@@ -227,6 +229,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="12dp"
                 android:background="@color/none_color"
+                android:textCursorDrawable="@color/whiteText"
                 android:hint="@string/create_password"
                 android:inputType="textPassword"
                 android:paddingTop="5dp"
