Changed restart button in casting

--- a/TalentShow/app/src/main/res/layout/fragment_casting.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_casting.xml
@@ -73,7 +73,8 @@
         android:layout_height="50dp"
         android:visibility="invisible"
         android:elevation="25dp"
-        android:background="@drawable/casting_fragment_restart"
+        android:background="@drawable/dark_circle_shape"
+        style="@style/ExoMediaButton.Play"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
