--- a/TalentShow/app/src/main/res/layout/fragment_video_best_main.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_video_best_main.xml
@@ -29,7 +29,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <VideoView
+    <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/fragment_video_best_main_video"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -37,6 +37,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginTop="13dp"
         android:layout_marginBottom="8dp"
+        app:resize_mode="zoom"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_video_choose_main_text1"
