--- a/TalentShow/app/src/main/res/layout/activity_main_frame.xml
+++ b/TalentShow/app/src/main/res/layout/activity_main_frame.xml
@@ -184,10 +184,11 @@
             app:layout_constraintBottom_toBottomOf="parent"/>
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/main_frame_info_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="@+id/main_frame_text1"
             app:layout_constraintStart_toEndOf="@+id/main_frame_text1"
             app:layout_constraintTop_toTopOf="@+id/main_frame_text1"
