--- a/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
@@ -49,6 +49,7 @@
                 android:layout_marginStart="6dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:focusable="false"
                 app:layout_constraintStart_toEndOf="@id/fragment_video_load_arrow"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
@@ -75,6 +76,7 @@
             android:gravity="center"
             android:textColor="@color/whiteText"
             android:text="@string/auth"
+            android:focusable="false"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/fragment_auth_logo"
             app:layout_constraintEnd_toEndOf="parent"/>
@@ -101,6 +103,7 @@
                 android:layout_marginBottom="14dp"
                 android:layout_marginTop="14dp"
                 android:gravity="start"
+                android:focusable="false"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -154,6 +157,7 @@
             android:layout_marginBottom="14dp"
             android:layout_marginTop="14dp"
             android:gravity="start"
+            android:focusable="false"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -200,6 +204,7 @@
             android:text="@string/sing_in"
             android:textColor="@color/whiteText"
             android:textSize="17sp"
+            android:focusable="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
