--- a/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
@@ -111,6 +111,7 @@
             android:textCursorDrawable="@color/whiteText"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
+            android:enabled="false"
             app:layout_constraintStart_toEndOf="@id/fragment_profile_settings_mail_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
