--- a/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
@@ -121,6 +121,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
+        android:id="@+id/fragment_profile_settings_info"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
