--- a/TalentShow/app/src/main/res/layout/info.xml
+++ b/TalentShow/app/src/main/res/layout/info.xml
@@ -16,13 +16,13 @@
         <TextView
             android:id="@+id/info_text"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:text="@string/info_profile"
             android:layout_marginTop="32dp"
             android:layout_marginBottom="32dp"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:gravity="start"
+            android:gravity="center"
             android:textSize="18sp"
             android:textColor="@color/whiteText"
             app:layout_constraintBottom_toBottomOf="parent"
