--- a/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
@@ -40,7 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.4" />
+            app:layout_constraintGuide_percent="0.3" />
 
         <TextView
             android:id="@+id/fragment_profile_settings_password_edit"
@@ -97,7 +97,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.4" />
+            app:layout_constraintGuide_percent="0.3" />
 
         <EditText
             android:id="@+id/fragment_profile_settings_email_edit"
@@ -127,10 +127,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
-        android:autoLink="email"
+        android:autoLink="web"
         android:gravity="left"
         android:text="@string/cant_change_mail"
-        android:textColorLink="@color/whiteText"
+        android:textColorLink="@color/colorAccent"
         android:textColor="@color/whiteText"
         android:textSize="12sp"
         app:layout_constraintEnd_toEndOf="parent"
