--- a/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
@@ -128,6 +128,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
         android:autoLink="web"
+        android:linksClickable="true"
         android:gravity="left"
         android:text="@string/cant_change_mail"
         android:textColorLink="@color/colorAccent"
