--- a/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
@@ -192,6 +192,21 @@
 
 
         <TextView
+            android:id="@+id/fragment_auth_text11"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="45dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="45dp"
+            android:gravity="center"
+            android:text="@string/i_accept_terms_auth"
+            android:textColor="@color/regGrayColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/fragment_auth_field_2" />
+
+
+        <TextView
             android:id="@+id/fragment_auth_continue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
