--- a/TalentShow/app/src/main/res/layout/fragment_profile_video_bottom_sheet.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_video_bottom_sheet.xml
@@ -24,6 +24,22 @@
             android:text="@string/send_to_casting"/>
     </LinearLayout>
     <LinearLayout
+        android:id="@+id/profile_video_bottom_sheet_interval"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="horizontal"
+        android:padding="16dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/whiteText"
+            android:layout_marginStart="16dp"
+            android:text="Изменить интервал"/>
+    </LinearLayout>
+    <LinearLayout
         android:id="@+id/profile_video_bottom_sheet_delete"
         android:layout_width="match_parent"
         android:layout_height="60dp"
