--- a/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
@@ -207,6 +207,22 @@
 
 
         <TextView
+            android:id="@+id/fragment_auth_reset_password"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="12dp"
+            android:gravity="center"
+            android:text="Забыли пароль?"
+            android:textColor="@color/whiteText"
+            android:textSize="14sp"
+            android:focusable="false"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/fragment_auth_continue" />
+
+        <TextView
             android:id="@+id/fragment_auth_continue"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
