--- a/TalentShow/app/src/main/res/layout/fragment_rating.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_rating.xml
@@ -5,6 +5,17 @@
     android:background="@color/darkBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rating_recycler_semifinalists"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="5dp"
+        android:paddingEnd="5dp"
+        android:paddingBottom="5dp"
+        android:paddingTop="13dp"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+
     <ProgressBar
         android:id="@+id/fragment_rating_progressbar"
         android:layout_width="50dp"
@@ -25,7 +36,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="17dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rating_recycler_semifinalists"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         />
