update Rating semifinalists

--- a/TalentShow/app/src/main/res/values/colors.xml
+++ b/TalentShow/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="hintTextColor">#000000</color>
     <color name="none_color">#00000000</color>
     <color name="pink">#C710D6</color>
+    <color name="darkPink">#AA3DFB</color>
 
 
 
