--- a/TalentShow/app/src/main/res/layout/fragment_rating.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_rating.xml
@@ -5,15 +5,7 @@
     android:background="@color/darkBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rating_recycler_semifinalists"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:paddingBottom="5dp"
-        android:paddingTop="13dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+
 
 
     <ProgressBar
@@ -26,29 +18,75 @@
         app:layout_constraintStart_toStartOf="parent"
         />
 
-    <TextView
-        android:id="@+id/fragment_casting_text1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/top_20"
-        android:textSize="20sp"
-        android:textColor="@color/whiteText"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/rating_recycler_semifinalists"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rating_recycler"
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="5dp"
-        android:paddingEnd="5dp"
-        android:paddingBottom="5dp"
-        android:paddingTop="13dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_casting_text1"/>
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            >
+
+            <TextView
+                android:id="@+id/fragment_casting_text_semi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/xce_factor_semifinalists"
+                android:textSize="20sp"
+                android:textColor="@color/whiteText"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="17dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+            <TextView
+                android:id="@+id/fragment_casting_text1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/top_20"
+                android:textSize="20sp"
+                android:textColor="@color/whiteText"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="17dp"
+                android:layout_marginEnd="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/rating_recycler_semifinalists"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rating_recycler_semifinalists"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="13dp"
+                app:layout_constraintTop_toBottomOf="@+id/fragment_casting_text_semi"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rating_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="13dp"
+                app:layout_constraintTop_toBottomOf="@id/fragment_casting_text1"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    </androidx.core.widget.NestedScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
