--- a/TalentShow/app/src/main/res/layout/rating_recycler_semifinalists_item.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_semifinalists_item.xml
@@ -1,15 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="30dp"
-    android:layout_height="30dp"
+    android:layout_width="60dp"
+    android:layout_height="76dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:layout_width="28dp"
-        android:layout_height="28dp"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
         android:id="@+id/rating_recycler_semifinalists_ava_item"
+        app:layout_constraintStart_toStartOf="@+id/rating_recycler_semifinalists_ava_item_bg"
+        app:layout_constraintTop_toTopOf="@+id/rating_recycler_semifinalists_ava_item_bg"
+        app:layout_constraintEnd_toEndOf="@+id/rating_recycler_semifinalists_ava_item_bg"
+        app:layout_constraintBottom_toBottomOf="@+id/rating_recycler_semifinalists_ava_item_bg"
+        />
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:id="@+id/rating_recycler_semifinalists_ava_item_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/gradient_icon_bg"
+        android:elevation="-1dp"
+        />
+
+    <TextView
+        android:id="@+id/rating_recycler_semifinalists_name_item"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/whiteText"
+        android:maxLines="1"
+        android:gravity="center"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@+id/rating_recycler_semifinalists_ava_item_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         />
 
 
