--- a/TalentShow/app/src/main/res/layout/fragment_profile_video_bottom_sheet.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_video_bottom_sheet.xml
@@ -2,7 +2,7 @@
 <LinearLayout app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
     android:id="@+id/fragment_history_menu_bottom"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
+    android:layout_height="240dp"
     android:orientation="vertical"
     android:background="@color/lightDark"
     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -38,6 +38,22 @@
             android:textColor="@color/whiteText"
             android:layout_marginStart="16dp"
             android:text="Изменить интервал"/>
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/profile_video_bottom_sheet_share"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="horizontal"
+        android:padding="16dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/whiteText"
+            android:layout_marginStart="16dp"
+            android:text="Поделиться видео"/>
     </LinearLayout>
     <LinearLayout
         android:id="@+id/profile_video_bottom_sheet_delete"
