--- a/TalentShow/app/src/main/res/layout/fragment_rating.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_rating.xml
@@ -62,6 +62,22 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 />
 
+            <TextView
+                android:id="@+id/rating_no_semifinalists"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="В этом разделе появятся полуфиналисты"
+                android:textSize="16sp"
+                android:gravity="center"
+                android:textColor="@color/whiteText"
+                android:paddingStart="5dp"
+                android:paddingEnd="5dp"
+                android:paddingBottom="5dp"
+                android:paddingTop="13dp"
+                app:layout_constraintTop_toBottomOf="@+id/fragment_casting_text_semi"
+                app:layout_constraintBottom_toTopOf="@id/fragment_casting_text1"
+                />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rating_recycler_semifinalists"
                 android:layout_width="match_parent"
