--- a/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
@@ -34,7 +34,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:controller_layout_id="@layout/exo_playback_control_view"
-                app:resize_mode="zoom"/>
+                app:resize_mode="zoom">
+
+                <ImageView
+                    android:id="@+id/rating_item_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop" />
+            </com.google.android.exoplayer2.ui.PlayerView>
 
             <TextView
                 android:id="@+id/rating_item_pos"
@@ -44,6 +51,7 @@
                 android:lineSpacingExtra="1sp"
                 android:textSize="24sp"
                 android:textColor="@color/whiteText"
+                android:elevation="20dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginStart="16dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -81,13 +89,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"/>
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/rating_item_image"
-                android:scaleType="centerCrop"
-                />
 
             <ImageButton
                 android:id="@+id/rating_item_start"
