--- a/TalentShow/app/src/main/res/layout/fragment_casting.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_casting.xml
@@ -29,7 +29,7 @@
         android:id="@+id/activity_casting_btn_x"
         android:layout_width="37dp"
         android:layout_height="37dp"
-        android:background="@drawable/activity_casting_dislike"
+        android:background="@drawable/dislike"
         android:layout_marginStart="68dp"
         android:layout_marginBottom="28dp"
         android:layout_marginEnd="138dp"
@@ -44,7 +44,7 @@
         android:id="@+id/activity_casting_btn_like"
         android:layout_width="43dp"
         android:layout_height="40dp"
-        android:background="@drawable/activity_casting_like"
+        android:background="@drawable/like"
         android:layout_marginEnd="68dp"
         android:layout_marginBottom="28dp"
         android:elevation="10dp"
