--- a/TalentShow/app/src/main/res/layout/fragment_notifications.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_notifications.xml
@@ -27,7 +27,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:text="@string/no_like_rn"
-        android:textColor="@color/whiteText"
+        android:textColor="@color/darkGrayText"
         android:textSize="18sp"
         android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
