--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -97,7 +97,7 @@
             android:layout_height="14dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="5dp"
-            android:src="@drawable/heart_like_icon"
+            android:src="@drawable/like"
             app:layout_constraintBottom_toBottomOf="@+id/fragment_profile_likes"
             app:layout_constraintEnd_toStartOf="@+id/fragment_profile_likes"
             app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
             android:text="@string/number_likes_u_got"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="#A2A2A2"
+            android:textColor="@color/darkGrayText"
             android:textSize="12sp"
             android:layout_marginTop="2dp"
             android:layout_marginStart="16dp"
@@ -150,11 +150,12 @@
             android:id="@+id/fragment_profile_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="12dp"
             android:layout_marginEnd="16dp"
             android:importantForAutofill="no"
-            android:inputType="textMultiLine"
-            android:textColor="@color/whiteText"
+            android:inputType="text"
+            android:textColor="@color/grayText"
+            android:hint="@string/you_have_no_description"
             android:textCursorDrawable="@color/whiteText"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
