--- a/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_public_profile.xml
@@ -73,7 +73,7 @@
             android:gravity="top"
             android:textSize="15sp"
             android:visibility="invisible"
-            android:textColor="@color/whiteText"
+            android:textColor="@color/grayText"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="5dp"
