--- a/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
@@ -142,7 +142,7 @@
                 android:id="@+id/rating_item_heart_icon"
                 android:layout_width="12dp"
                 android:layout_height="12dp"
-                android:src="@drawable/heart_like_icon"
+                android:src="@drawable/like"
                 android:layout_marginTop="270dp"
                 android:layout_marginStart="16dp"
                 tools:ignore="ContentDescription"
