Change activity background

--- a/TalentShow/app/src/main/res/values/colors.xml
+++ b/TalentShow/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#141516</color>
-    <color name="colorPrimaryDark">#141516</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#D11AE5</color>
-    <color name="darkBackground">#141516</color>
+    <color name="darkBackground">#000000</color>
     <color name="whiteText">#FFFFFF</color>
     <color name="whiteEditableText">#F1F1F1</color>
     <color name="regGrayColor">#D2D2D2</color>
@@ -22,6 +22,7 @@
     <color name="none_color">#00000000</color>
     <color name="pink">#D11AE5</color>
     <color name="darkPink">#AA3DFB</color>
+    <color name="navBarColor">#141516</color>
 
 
 
