--- a/TalentShow/app/src/main/res/values/styles.xml
+++ b/TalentShow/app/src/main/res/values/styles.xml
@@ -6,6 +6,12 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
+    </style>
+
+    <style name="NavigationTheme" parent="AppTheme">
+        <!-- Customize your theme here. -->
+        <item name="android:navigationBarColor">@color/navBarColor</item>
     </style>
 
     <style name="heading">
