Delete unused drawables/ Change colors and the area of the reaction add video button

--- a/TalentShow/app/src/main/res/drawable/blue_circle.xml
+++ b/TalentShow/app/src/main/res/drawable/blue_circle.xml
@@ -13,7 +13,7 @@
           android:endY="50"
           android:endX="0"
           android:type="linear">
-        <item android:offset="0" android:color="#FFE00CDC"/>
+        <item android:offset="0" android:color="#FF33CC"/>
         <item android:offset="1" android:color="#FF7F1EC6"/>
       </gradient>
     </aapt:attr>
