--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -189,8 +189,10 @@
             app:layout_constraintEnd_toStartOf="@id/fragment_profile_container2">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/fragment_profile_video_container1"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="@drawable/file_load_button_background">
 
                 <View
                     android:id="@+id/fragment_profile_settings1"
@@ -250,6 +252,7 @@
             android:layout_marginTop="11dp"
             android:layout_marginStart="11dp"
             android:visibility="invisible"
+            android:background="@drawable/file_load_button_background"
             app:cardCornerRadius="9dp"
             android:id="@+id/fragment_profile_container2"
             app:cardBackgroundColor="@color/darkBackground"
@@ -317,6 +320,7 @@
             android:layout_marginTop="11dp"
             android:layout_marginBottom="11dp"
             android:visibility="invisible"
+            android:background="@drawable/file_load_button_background"
             app:cardBackgroundColor="@color/darkBackground"
             app:cardCornerRadius="9dp"
             app:layout_constraintVertical_bias="0.0"
@@ -386,6 +390,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="11dp"
             android:visibility="invisible"
+            android:background="@drawable/file_load_button_background"
             app:cardBackgroundColor="@color/darkBackground"
             app:cardCornerRadius="9dp"
             app:layout_constraintVertical_bias="0.0"
