--- a/TalentShow/app/src/main/res/layout/fragment_load_file.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_load_file.xml
@@ -19,7 +19,7 @@
             android:id="@+id/fragment_video_load_arrow"
             android:layout_width="12dp"
             android:layout_height="20dp"
-            android:background="@drawable/blue_arrow_back"
+            android:background="@drawable/arrow_back"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -81,7 +81,7 @@
         <View
             android:layout_width="22dp"
             android:layout_height="22dp"
-            android:background="@drawable/white_cross"
+            android:background="@drawable/plus_icon"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
