--- a/TalentShow/app/src/main/res/layout/fragment_registration.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_registration.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/fragment_reg_arrow"
                 android:layout_width="12dp"
                 android:layout_height="20dp"
-                android:background="@drawable/blue_arrow_back"
+                android:background="@drawable/arrow_back"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
